--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,8 @@
     "@angular/platform-browser": "^21.1.2",
     "@angular/platform-browser-dynamic": "^21.1.2",
     "@angular/router": "^21.1.2",
+    "@auth0/auth0-spa-js": "^2.3.2",
+    "auth0": "^5.3.1",
     "rxjs": "^7.8.1",
     "tslib": "^2.8.1",
     "zone.js": "^0.16.0"
